--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,5 @@
 /* stylelint-disable no-descending-specificity */
+/* stylelint-disable plugin/no-low-performance-animation-properties */
 @import './dark';
 
 :root {
@@ -34,10 +35,9 @@
   --transparent: transparent;
   --backdrop-color: rgba(0, 0, 0, 0.4);
   --typing-color: #2f008a;
-  --twitter-color: #1da1f2;
+  --twitter-color: #1DA1F2;
   --yellow-color: yellow;
 
-  --xs-font-size: 11px;
   --xs-font-size: 12px;
   --sm-font-size: 14px;
   --md-font-size: 18px;
@@ -552,7 +552,7 @@ h2 {
     }
     &::before {
       opacity: 0;
-      transition: opacity 0.2s;
+      transition: opacity .2s;
       content: '';
     }
     &.copied {
@@ -651,8 +651,12 @@ h2 {
       cursor: pointer;
     }
 
-    &.External-block {
+    &.externalClicked {
       position: relative;
+      .btn
+      {
+        opacity:0.4;
+      }
 
       &::before {
         position: absolute;
@@ -661,12 +665,11 @@ h2 {
         z-index: 100;
         width: 48px;
         height: 48px;
-        background: transparent url('./images/External/lock.svg') 50% 50%
-          no-repeat;
+        background: transparent url('./images/External/lock.svg') 50% 50% no-repeat;
         background-size: cover;
         opacity: 1;
         filter: drop-shadow(0px 10px 40px rgba(0, 0, 0, 0.1));
-        content: '';
+        content: "";
       }
     }
   }
@@ -682,7 +685,7 @@ h2 {
     border: none;
     border-radius: 27px;
     outline: none;
-    box-shadow: 0px 4px 8px var(--copyblock-color);
+    box-shadow: 0 4px 8px var(--copyblock-color);
     cursor: pointer;
 
     .fa-globe {
@@ -694,7 +697,6 @@ h2 {
       position: relative;
       background-image: url(./images/Ethereum.png);
       background-size: 80px;
-      opacity: 0.4;
     }
 
     &.Coinbase {
@@ -780,7 +782,7 @@ h2 {
     font: 500 14px/18px 'IBM Plex Sans', sans-serif;
     letter-spacing: -0.025em;
     text-transform: uppercase;
-    background: #4e529a;
+    background: #4E529A;
     border-radius: 4px;
     cursor: pointer;
 
@@ -864,7 +866,7 @@ h2 {
   border: none;
   border-radius: 25px;
   outline: none;
-  box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
   cursor: pointer;
 
   & > .twitter {
@@ -1155,12 +1157,14 @@ h2 {
       border-radius: 5px;
     }
 
+
     > img {
       width: 1em;
       margin-right: 10px;
     }
+
     > p {
-      margin: 0px;
+      margin: 0;
       white-space: nowrap;
     }
   }
@@ -1173,7 +1177,7 @@ h2 {
     width: 100%;
     height: 50%;
     padding-left: 18px;
-    overflow: none;
+    overflow: hidden;
     text-align: left;
     background-color: var(--transparent);
     border: none;
@@ -1404,9 +1408,7 @@ input[type='radio']:focus + .contact-manage {
 .arrow-select {
   width: 14px;
   height: 15px;
-  background: url(./images/arrow-select.svg);
-  background-repeat: no-repeat;
-  background-position: center;
+  background: url(./images/arrow-select.svg) no-repeat center;
   background-size: contain;
 }
 
@@ -1539,6 +1541,7 @@ input[type='radio']:focus + .contact-manage {
       cursor: pointer;
 
       &.external {
+
         & > span {
           width: 100%;
           font-size: var(--xl-font-size);
@@ -1656,6 +1659,7 @@ $scale: 0.95;
       transform: scale($scale);
       opacity: 0;
     }
+
     &-enter-active {
       transform: scale(1);
       opacity: 1;
@@ -1666,12 +1670,14 @@ $scale: 0.95;
       transform: scale(1);
       opacity: 1;
     }
+
     &-exit-active {
       transform: scale(0.9);
       opacity: 0;
       transition: opacity $dur, transform $dur;
     }
   }
+
   &-opacity {
     &-enter {
       opacity: 0;
