update: Code reformatted and refactored Dependencies upgrade, multiple refactoring, new configs, new linting. Merged with refactored branch

--- a/src/components/Common/floating-menu.scss
+++ b/src/components/Common/floating-menu.scss
@@ -15,8 +15,8 @@
 
   .menu-content {
     position: absolute;
-    right: 0px;
-    bottom: 0px;
+    right: 0;
+    bottom: 0;
     z-index: 11;
     border: 1px solid var(--border-color);
     border-radius: 5px;
