--- a/assets/style/components/custom/_button.scss
+++ b/assets/style/components/custom/_button.scss
@@ -14,7 +14,7 @@
     padding: 0 15px;
     box-sizing: border-box;
     transition: .2s ease;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.04), 0px 4px 6px rgba(0, 0, 0, 0.04);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04), 0 4px 6px rgba(0, 0, 0, 0.04);
     outline: none;
     &.outline {
         color: $darkerGray;
@@ -30,7 +30,7 @@
         color: #BABABA;
         border-color: #BABABA;
         background-color: $lighterGray;
-        box-shadow: inset 0px 2px 4px rgba(0, 0, 0, 0.06);
+        box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.06);
     }
 
     i {
