feature: next big update on wallet
— Minting tokens
— Wallet unlocking procedure + some fixes
— Feedback fixes, part1

--- a/assets/style/pages/_account.scss
+++ b/assets/style/pages/_account.scss
@@ -1,6 +1,7 @@
 .walletPage {
   .balancesBlock {
-    height: calc(100vh - 105px - 316px);
+        /* height: calc(100vh - 105px - 316px); */
+        height: max-content;
     min-height: 340px;
 
     .centerBlock {
