--- a/assets/style/blocks/_header.scss
+++ b/assets/style/blocks/_header.scss
@@ -10,6 +10,9 @@ header {
     grid-template-columns: 100%;
     grid-template-rows: 35px 1fr;
     grid-row-gap: 5px;
+        @media screen and (min-width: 1201px) {
+            max-width: 1920px;
+        }
   }
 
   .firstRow {
