--- a/assets/style/_variables.scss
+++ b/assets/style/_variables.scss
@@ -6,6 +6,7 @@ $violet: #4e529a;
 $green: #1d9b4a;
 $darkViolet: #1d2039;
 $lightViolet: #8c8dfc;
+$red: #F25F5C;
 
 $link-color: $lightViolet;
 $color-secondary: $violet;
