--- a/assets/style/layouts/_default.scss
+++ b/assets/style/layouts/_default.scss
@@ -1,83 +1,92 @@
 .defaultLayout {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 
-    .routerContainer {
-        min-height: calc(100vh - 105px - 110px);
-    }
-    .tileBlock {
-        width: 90%;
-        height: auto;
-        max-width: 505px;
-        margin-top: 15px;
-        padding: 29px;
-        border-radius: 4px;
-        margin-left: auto;
-        margin-right: auto;
+  .routerContainer {
+    min-height: calc(100vh - 105px - 110px);
+  }
+
+  .tileBlock {
+    width: 90%;
+    height: auto;
+    max-width: 505px;
+    margin-top: 15px;
+    padding: 29px;
+    margin-left: auto;
+    margin-right: auto;
+    transition: background-color $transition1;
+    box-shadow: 4px 4px 8px 0 rgba(11, 52, 102, 0.12);
+    border-radius: 10px;
+
+    .tileHeadline {
+      width: 100%;
+      display: flex;
+      padding-top: 10px;
+      padding-bottom: 20px;
+      margin: 0;
+      text-align: center;
+      font-weight: 700;
+      align-items: center;
+      justify-content: center;
+
+      i {
+        display: block;
+        width: 25px;
+        height: 25px;
+        border-radius: 50%;
+        font-size: 11px;
+        line-height: 26px;
+        background: transparentize($color: $gray, $amount: 0.7);
+        opacity: .9;
+        margin-left: 10px;
+        transform: translateY(1px);
         transition: background-color $transition1;
+        cursor: pointer;
 
-        .tileHeadline {
-            width: 100%;
-            display: flex;
-            padding-top: 10px;
-            padding-bottom: 20px;
-            margin: 0;
-            text-align: center;
-            font-weight: 700;
-            align-items: center;
-            justify-content: center;
-
-            i {
-                display: block;
-                width: 25px;
-                height: 25px;
-                border-radius: 50%;
-                font-size: 11px;
-                line-height: 26px;
-                background: transparentize($color: $gray, $amount: 0.7);
-                opacity: .9;
-                margin-left: 10px;
-                transform: translateY(1px);
-                transition: background-color $transition1;
-                cursor: pointer;
-                &:hover {
-                    background: transparentize($color: $gray, $amount: 0.5);
-                }
-            }
+        &:hover {
+          background: transparentize($color: $gray, $amount: 0.5);
         }
-        .tileText {
-            margin: 5px 0;
-            font-size: 16px;
-            text-align: center;
-        }
-        .tileTextBg {
-            margin: 5px 0;
-            font-size: 16px;
-            padding: 15px;
-            border-radius: 5px;
-            border: 1px solid;
-        }
-        /* .form-input-prepend {
-            background-color: transparent !important;
-        } */
+      }
     }
+
+    .tileText {
+      margin: 5px 0;
+      font-size: 16px;
+      text-align: center;
+    }
+
+    .tileTextBg {
+      margin: 5px 0;
+      font-size: 16px;
+      padding: 15px;
+      border-radius: 5px;
+      border: 1px solid;
+    }
+
+    /* .form-input-prepend {
+        background-color: transparent !important;
+    } */
+  }
 }
 
 body.inkline.-light .defaultLayout {
-    .tileBlock {
-        background: $white;
-    }
-    .tileTextBg {
-        background-color: #fff8de1f;
-        border-color: #180d0d14;
-    }
+  .tileBlock {
+    background: $white;
+  }
+
+  .tileTextBg {
+    background-color: #fff8de1f;
+    border-color: #180d0d14;
+  }
 }
+
 body.inkline.-dark .defaultLayout {
-    .tileBlock {
-        background: $darkViolet;
-    }
-    .tileTextBg {
-        background-color: #fff8de1a;
-        border-color: #ffffff14;
-    }
+  .tileBlock {
+    background: $darkViolet;
+  }
+
+  .tileTextBg {
+    background-color: #fff8de1a;
+    border-color: #ffffff14;
+  }
 }
