--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -14,6 +14,8 @@
 @import "./blocks/header.scss";
 @import "./blocks/footer.scss";
 @import "./blocks/logo.scss";
+@import "./blocks/onboard.scss";
+@import "./blocks/cookie.scss";
 
 
 //Components
