--- a/assets/style/pages/_account.scss
+++ b/assets/style/pages/_account.scss
@@ -17,16 +17,17 @@
 
     .balances {
       width: 100%;
-      height: auto;
+      height: max-content;
       min-height: 300px;
-      max-height: calc(30vh - 160px);
-      overflow: hidden;
+      /* max-height: calc(30vh - 160px);
+      overflow: hidden; */
 
       .balancesList {
         width: 100%;
-        height: calc(100% - 80px);
+        height: max-content;
+        /* height: calc(100% - 80px);
         max-height: calc(30vh - 160px);
-        min-height: 150px;
+        min-height: 150px; */
         overflow: auto;
 
         &::-webkit-scrollbar {
@@ -46,7 +47,7 @@
 
         .balanceItem {
           width: 100%;
-          height: 70px;
+          height: 60px;
           display: flex;
           justify-content: space-between;
           align-items: center;
