copy: wednesday's commit copied
Many many things regarding fees, auth and onboarding

--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -16,6 +16,7 @@
 @import "./blocks/logo.scss";
 @import "./blocks/onboard.scss";
 @import "./blocks/cookie.scss";
+@import "./blocks/screenLoader.scss";
 
 
 //Components
