--- a/src/assets/style/_transitions.scss
+++ b/src/assets/style/_transitions.scss
@@ -5,7 +5,7 @@
     opacity: 0;
 }
 .fadeFast-enter-active, .fadeFast-leave-active {
-    transition: opacity .2s;
+    transition: .2s ease;
 }
 .fadeFast-enter, .fadeFast-leave-to {
     opacity: 0;
