--- a/src/assets/style/blocks/_onboard.scss
+++ b/src/assets/style/blocks/_onboard.scss
@@ -1,4 +1,5 @@
 .bn-onboard-custom {
+    z-index: 10;
     &.bn-onboard-dark-mode {
         background-color: $darkViolet !important;
 
@@ -38,13 +39,13 @@
         background-color: transparent !important;
     }
     .bn-onboard-dark-mode-background-hover:hover {
-        background-color: $violet !important;   
+        background-color: $violet !important;
     }
     .bn-onboard-dark-mode-background {
-        background-color: $violet !important;   
+        background-color: $violet !important;
     }
     .bn-onboard-modal-content-header {
-        background-color: transparent !important;   
+        background-color: transparent !important;
     }
     .bn-onboard-modal-content-header {
         height: auto;
@@ -55,7 +56,7 @@
         height: 25px;
         width: 25px;
         top: 1.65em;
-        
+
         svg {
             width: 100%;
             height: 100%;
