update: improvements & bugfixes
— simplified .env files
— .editorconfig update
— title fix
— removed direct dependency of walletconnect in favour of onboard.js
— code linted once again
— consistent loader
— version fixed
— version BG changed
— refactoring
— fix for the Deposit

--- a/src/assets/style/_default.scss
+++ b/src/assets/style/_default.scss
@@ -210,6 +210,13 @@ button.-lg.-circle {
                     display: none !important;
                 }
             }
+            @media (max-width: $mobile) {
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+
+                font-size: 1rem;
+            }
         }
         .header,.footer,.body {
             padding-left: 28px !important;
