--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -16,7 +16,7 @@
 @import "./blocks/logo.scss";
 @import "./blocks/onboard.scss";
 @import "./blocks/cookie.scss";
-@import "./blocks/screenLoader.scss";
+@import "./blocks/loggingInLoader.scss";
 
 
 //Components
