fixes ID-ZKF-158
— icon completely removed

--- a/src/assets/style/layouts/_default.scss
+++ b/src/assets/style/layouts/_default.scss
@@ -90,3 +90,7 @@ body.inkline.-dark .defaultLayout {
     border-color: #ffffff14;
   }
 }
+
+.bn-onboard-custom.bn-onboard-modal-content-header-icon {
+  display: none !important;
+}
