update: Multiple changes, fixes, preparing to production:
— fixes ID-ZKF-167 →
— fixes ID-ZKF-158
  icon completely removed
— fixes ID-ZKF-164
    [x] checked both the API and the links over the app
— fixed ID-ZKF-149
— fixed ID-ZKF-90
    [x] WalletConnect fixed
    [x] Formatic fixed → There was demo-key only
    [x] ”Use the transaction link to track the progress”
    [x] Validation fixed
    [x] Links fixed
    [x] UX updates

--- a/src/assets/style/blocks/_cookie.scss
+++ b/src/assets/style/blocks/_cookie.scss
@@ -1,21 +1,21 @@
 .cookieContainer {
     position: fixed;
     width: 100%;
-    height: max-content;
+    height: auto;
     bottom: 0;
     left: 0;
     padding: 20px;
     font-size: 16px;
     text-align: center;
     transition: background-color $transition1;
-    
+
     .cookieMain {
         display: grid;
         height: max-content;
         grid-template-columns: 1fr 150px;
         grid-template-rows: 100%;
         grid-gap: 10px;
-        
+
         .text {
             text-align: left;
             max-width: 700px;
