update: applied stash with footer changes
+ removed title of the current network under logo

--- a/src/assets/style/blocks/_footer.scss
+++ b/src/assets/style/blocks/_footer.scss
@@ -1,4 +1,13 @@
 footer {
+    &.mainFooter {
+        max-width: 1920px;
+
+        & > div {
+            @media (max-width: $mobile) {
+                flex-direction: column-reverse !important;
+            }
+        }
+    }
     a {
         font-size: 18px;
     }
