update: Styling changes
— Resolving ID-ZKF-90 #ZKF-90
— Resolving ID-ZKF-170 #ZKF-170

--- a/src/assets/style/_default.scss
+++ b/src/assets/style/_default.scss
@@ -320,6 +320,9 @@ button.-lg.-circle {
       background-color: transparent !important;
     }
   }
+  .form-input.-prefixed input {
+    padding-left: 3rem !important;
+  }
 }
 
 .form-group {
