--- a/src/assets/style/blocks/_header.scss
+++ b/src/assets/style/blocks/_header.scss
@@ -62,7 +62,7 @@ header {
         grid-gap: 15px;
 
         .mainLink {
-          font-size: 16px;
+          font-size: 16px !important;
         }
       }
 
