--- a/src/assets/style/components/_loader.scss
+++ b/src/assets/style/components/_loader.scss
@@ -1,46 +1,33 @@
-.loader {
-    animation: loaderAnim 2s linear infinite;
-    &.medium {
-        width: 100px;
-        height: 100px;
-    }
-    &.white .loaderCircle {
-        stroke: #d8d8d8;
-    }
-    &.black .loaderCircle {
-        stroke: $black;
+.loaderSpinner {
+    font-size: 10px;
+    position: relative;
+    text-indent: -9999em;
+    border: .5rem solid #F5F5F5;
+    border-left: .5rem solid #8c8dfc;
+    transform: translateZ(0);
+    animation: nuxtLoadingCustom 1.1s infinite linear;
+    &.size {
+        &-lg {
+            &, &::after {
+                width: 5rem;
+                height: 5rem;
+            }
+        }
+        &-md {
+            &, &::after {
+                width: 4rem;
+                height: 4rem;
+            }
+        }
+        &-sm {
+            &, &::after {
+                width: 3rem;
+                height: 3rem;
+            }
+        }
     }
 
-    .loaderCircle {
-        fill: none;
-        animation: loaderCircleAnim 1.5s ease-in-out infinite;
-        stroke-width: 3;
-        stroke-linecap: round;
-        stroke-dasharray: 89,200;
-        stroke-dashoffset: 0;
-    }
-    .loaderSVG {
-        width: 100%;
-        height: 100%;
-    }
-}
-@keyframes loaderAnim {
-    to {
-        transform: rotate(360deg);
-    }
-}
-@keyframes loaderCircleAnim {
-    0% {
-        stroke-dasharray: 1,200;
-        stroke-dashoffset: 0;
-    }
-    
-    50% {
-        stroke-dasharray: 89,200;
-        stroke-dashoffset: -35;
-    }
-    100% {
-        stroke-dasharray: 89,200;
-        stroke-dashoffset: -124;
+    &, &::after {
+      border-radius: 50%;
     }
 }
