--- a/src/assets/style/pages/_transactions.scss
+++ b/src/assets/style/pages/_transactions.scss
@@ -94,6 +94,9 @@
         .amount {
           font-size: 24px;
           line-height: 32px;
+          &.small {
+            font-size: 14px;
+          }
         }
 
         .token {
