--- a/src/assets/style/layouts/_index.scss
+++ b/src/assets/style/layouts/_index.scss
@@ -70,6 +70,14 @@
     }
   }
 
+  footer > .container {
+    align-items: center;
+    height: 90px;
+    margin-top: calc(100vh - (100vh - 172px) - 90px);
+    display: flex !important;
+    justify-content: space-between;
+  }
+
   .externalWalletPopover .popover {
     width: 330px;
     padding: 20px 30px;
@@ -78,6 +86,7 @@
       .iconsBlock a i {
         color: $darkViolet;
       }
+
     }
 
     &.-light {
@@ -144,5 +153,13 @@ body.inkline {
       background-size: cover;
       background-position: center;
     }
+  }
+}
+
+.inkline.-dark
+{
+  footer > .container .badge{
+    background: #e9ecef;
+    color: #4E529A;
   }
 }
