update: footer updated

--- a/src/assets/style/blocks/_footer.scss
+++ b/src/assets/style/blocks/_footer.scss
@@ -1,14 +1,44 @@
 footer {
-    &.mainFooter {
-        max-width: 1920px;
+  &.mainFooter {
+    max-width: 700px;
+    .row
+    {
+      font-size: 14px !important;
+    }
 
-        & > div {
-            @media (max-width: $mobile) {
-                flex-direction: column-reverse !important;
-            }
-        }
+    & > div {
+      @media (max-width: $mobile) {
+        flex-direction: column-reverse !important;
+      }
     }
+  }
+
+  a {
+    font-size: 14px;
+    @media (max-width: $mobile) {
+      font-size: 14px;
+    }
+  }
+
+  @media (max-width: $mobile) {
+
+    .floating-on-mobile {
+      position: fixed;
+      bottom: 4vh;
+      border-radius: 100%;
+      width: 2.5rem !important;
+      height: 2.5rem !important;
+      right: 4vw;
+      padding: 0;
+      box-shadow: 0 3px 5px -1px rgba(0, 0, 0, 0.08), 0px 6px 10px 0px rgba(0, 0, 0, 0.10), 0px 1px 18px 0px rgba(0, 0, 0, .10);
+    }
+  }
+}
+
+.indexLayout {
+  footer {
     a {
-        font-size: 18px;
+      font-size: 14px;
     }
+  }
 }
