--- a/src/assets/style/layouts/_default.scss
+++ b/src/assets/style/layouts/_default.scss
@@ -11,8 +11,7 @@
     height: auto;
     max-width: 505px;
     margin-top: 15px;
-    padding: 29px;
-    padding-top: 20px;
+    padding: 20px 29px 29px;
     margin-left: auto;
     margin-right: auto;
     transition: background-color $transition1;
