--- a/src/assets/style/blocks/_footer.scss
+++ b/src/assets/style/blocks/_footer.scss
@@ -43,11 +43,11 @@ footer {
     }
   }
 }
-.inkline.-dark
+.inkline
 {
   footer{
     .badge {
-      background-color: "#e9ecef";
+      background-color: #e9ecef !important;
     }
   }
 }
