Update: new package connected for the onboarding provision
— plus small code-cleaning and a couple of things that were lost from the first release
— additionally: fonts switched to Fira Sans

--- a/src/assets/style/_variables.scss
+++ b/src/assets/style/_variables.scss
@@ -4,7 +4,7 @@ $gray: #9EAEBB;
 $black: #242424;
 $violet: #4e529a;
 $green: #1d9b4a;
-$darkViolet: #1d2039;
+$darkViolet: #171A49; //MajorDark
 $lightViolet: #8c8dfc;
 $red: #F25F5C;
 
@@ -28,7 +28,7 @@ $modal-background-light: $white;
 
 
 //Fonts
-$ibm: 'IBM Plex Sans', sans-serif;
+$ibm: 'Fira Sans', sans-serif;
 
 $font-family-primary-base: $ibm;
 
