--- a/src/assets/style/blocks/_onboard.scss
+++ b/src/assets/style/blocks/_onboard.scss
@@ -1,70 +1,101 @@
 .bn-onboard-custom {
-    z-index: 10;
-    &.bn-onboard-dark-mode {
-        background-color: $darkViolet !important;
+  z-index: 10;
 
-        .bn-onboard-prepare-error {
-            background-color: transparent !important;
-        }
-        .bn-onboard-selected-wallet {
-            background-color: transparentize($color: $gray, $amount: 0.95) !important;
-        }
-    }
-    .bn-onboard-icon-button {
-        border-radius: 8px;
-    }
-    .bn-onboard-selected-wallet {
-        background-color: transparentize($color: $gray, $amount: 0.7) !important;
+  &.bn-onboard-dark-mode {
+    background-color: $darkViolet !important;
 
-        span {
-            i {
-                text-decoration: none;
-                text-transform: capitalize;
-                font-style: normal;
-            }
-        }
-    }
-    .bn-onboard-prepare-button {
-        background-color: $violet;
-        border-color: $violet !important;
-        color: $white !important;
-        border-radius: 4px;
-        transition: $transition1;
-        &:hover {
-            background-color: $lightViolet !important;
-            border-color: $lightViolet;
-        }
-    }
     .bn-onboard-prepare-error {
-        background-color: transparent !important;
+      background-color: transparent !important;
     }
-    .bn-onboard-dark-mode-background-hover:hover {
-        background-color: $violet !important;
-    }
-    .bn-onboard-dark-mode-background {
-        background-color: $violet !important;
-    }
-    .bn-onboard-modal-content-header {
-        background-color: transparent !important;
-    }
-    .bn-onboard-modal-content-header {
-        height: auto;
-        padding: 0;
-        margin-bottom: 2em;
-    }
-    .bn-onboard-modal-content-close {
-        height: 25px;
-        width: 25px;
-        top: 1.65em;
 
-        svg {
-            width: 100%;
-            height: 100%;
-        }
+    .bn-onboard-selected-wallet {
+      background-color: transparentize($color: $gray, $amount: 0.95) !important;
     }
-    .bn-onboard-select-wallet-info {
-        color: $lightViolet !important;
+  }
+
+  .bn-onboard-modal-select-wallets {
+    max-height: 50vh;
+  }
+
+  .bn-onboard-custom.bn-onboard-select-wallet-definition {
+    font-size: 14px;
+
+    span {
+      font-weight: bold;
+      display: block;
+      margin: 5px;
     }
+  }
+  .bn-onboard-select-wallet-info
+  {
+    font-size: 16px;
+    font-weight: bold;
+  }
+  .bn-onboard-icon-button {
+    border-radius: 8px;
+  }
+
+  .bn-onboard-selected-wallet {
+    background-color: transparentize($color: $gray, $amount: 0.7) !important;
+
+    span {
+      i {
+        text-decoration: none;
+        text-transform: capitalize;
+        font-style: normal;
+      }
+    }
+  }
+
+  .bn-onboard-prepare-button {
+    background-color: $violet;
+    border-color: $violet !important;
+    color: $white !important;
+    border-radius: 4px;
+    transition: $transition1;
+
+    &:hover {
+      background-color: $lightViolet !important;
+      border-color: $lightViolet;
+    }
+  }
+
+  .bn-onboard-prepare-error {
+    background-color: transparent !important;
+  }
+
+  .bn-onboard-dark-mode-background-hover:hover {
+    background-color: $violet !important;
+  }
+
+  .bn-onboard-dark-mode-background {
+    background-color: $violet !important;
+  }
+
+  .bn-onboard-modal-content-header {
+    background-color: transparent !important;
+  }
+
+  .bn-onboard-modal-content-header {
+    height: auto;
+    padding: 0;
+    margin-bottom: 2em;
+  }
+
+  .bn-onboard-modal-content-close {
+    height: 25px;
+    width: 25px;
+    top: 1.65em;
+
+    svg {
+      width: 100%;
+      height: 100%;
+    }
+  }
+
+  .bn-onboard-select-wallet-info {
+    color: $lightViolet !important;
+  }
 
   .bn-onboard-custom.bn-onboard-modal-content-header-icon {
     display: none !important;
